--- a/01_Intro_a_la_web/1.2.3.2_forms/index.html
+++ b/01_Intro_a_la_web/1.2.3.2_forms/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer formulario</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    <form  name="mi form" action="">
-        <input type="text">
-        <input type="email">
-    </form>
+    <header class="header">
+        <h1>Mi sitio Web</h1>
+    </header>
+    <main class="main">
+        <article>
+            <form name="mi form" method="" action="">
+                <div class="input_label">
+                    <label for="name">Nombre:</label>
+                    <input class="input" id="name" name="name" type="text" />
+                </div>
+                <div class="input_label">
+                    <label for="email">Email:</label>
+                    <input class="input" id="email" name="email" type="email" />
+                </div>
+                <div class="input_label">
+                    <label for="password">Contraseña:</label>
+                    <input class="input" id="password" name="password" type="password" />
+                </div>
+                <div class="input_label">
+                    <label for="description">Descripción:</label>
+                    <textarea class="input" name="description" id="description" cols="40" rows="7"></textarea>
+                </div>
+
+
+            </form>
+        </article>
+        <article>
+            <table>
+                <thead>
+                    <tr>
+                        <th>The table header1</th>
+                        <th>The table header2</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>The table body</td>
+                        <td>with two columns</td>
+                    </tr>
+                </tbody>
+            </table>
+        </article>
+    </main>
+    <footer class="footer">
+        <h6><a href="http://">F</a></h6>
+        <h6><a href="http://">T</a></h6>
+        <h6><a href="http://">I</a></h6>
+        <h6><a href="http://">L</a></h6>
+    </footer>
+
+
 </body>
+
 </html>
