--- a/01_Intro_a_la_web/1.3.1.1_ejercicio_bandera/index.html
+++ b/01_Intro_a_la_web/1.3.1.1_ejercicio_bandera/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="padre">
+        <div>
+            
+        </div>
+
+    </div>
     
 </body>
 </html>
