--- a/01_Intro_a_la_web/1.4.1_responsive_desing/personal.html
+++ b/01_Intro_a_la_web/1.4.1_responsive_desing/personal.html
@@ -2,22 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive</title>
+    <title>Mi Pagina Personal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
-    
-</head>
+ </head>
 <body>
     <header>
         <h1>
             <a href="http://index.html"></a>
-            MI DISEÑO </h1>
+            MI DISEÑO 
+        </h1>
+        <h2>
+            <a href="http://personal.html"></a>
+            Mi Pagina Personal
+        </h2>
     </header>
-    <main class="main">
+    <main class="main_personal">
         <div class="hijo uno"></div>
         <div class="hijo dos"></div>
     </main>
