se agregan enlaces a las paginas

--- a/01_Intro_a_la_web/1.4.1_responsive_desing/index.html
+++ b/01_Intro_a_la_web/1.4.1_responsive_desing/index.html
@@ -14,8 +14,11 @@
 <body>
     <header>
         <h1>
-            <a href="http://index.html"></a>
-            MI DISEÑO </h1>
+            <a href="index.html"> MI DISEÑO </a>
+        </h1>
+        <h2>
+            <a href="personal.html"> Mi Pagina Personal</a>  
+        </h2>
     </header>
     <main class="main">
         <div class="hijo uno"></div>
