--- a/01_Intro_a_la_web/1.4.1_responsive_desing/personal.html
+++ b/01_Intro_a_la_web/1.4.1_responsive_desing/personal.html
@@ -12,17 +12,20 @@
 <body>
     <header>
         <h1>
-            <a href="http://index.html"></a>
-            MI DISEÑO 
+            <a href="index.html"> MI DISEÑO </a>
         </h1>
         <h2>
-            <a href="http://personal.html"></a>
-            Mi Pagina Personal
+            <a href="personal.html"> Mi Pagina Personal</a>  
         </h2>
     </header>
     <main class="main_personal">
-        <div class="hijo uno"></div>
-        <div class="hijo dos"></div>
+        <div class="hijo uno_personal">
+            <div class="contenedor_imagen">
+                <img src="assets/anochecer.jpg" alt="anochecer" id="imagen">
+                <button id="boton_raton">Hola Que es esto jejeje</button>
+            </div>
+        </div>
+        <div class="hijo dos_"></div>
     </main>
 
     <footer></footer>
