--- a/02_Javascript/2.2.2_funciones/index.html
+++ b/02_Javascript/2.2.2_funciones/index.html
@@ -15,10 +15,15 @@
         <div>
             <p> <span> 1: </span> Solicitar al usuario un número, y determinar si es divisible entre dos o no. Mostrando al usuario un mensaje de “X número es divisible entre 2” o “X número.
             </p>
-            <input id="input-ejercicio1" type="number"/>
-            <h5> Resultado:<span id="resultado-1"></span></h5>
+            <input id="input-ejercicio-1" type="number"/>
+            <h5> Resultado: <span id="resultado-1"></span></h5>
             <button type="submit" onclick="ejercicio1()">Enviar</button>
             
+        </div>
+        <div>
+            <p>
+                
+            </p>
         </div>
     </main>
 
